--- a/public/html/index.html
+++ b/public/html/index.html
@@ -3,11 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>ws_actor match</title>
-    <link rel="stylesheet" type="text/css" href="css/res.css" media="all">
-    <script type="text/javascript" src="js/ws.js"></script>
 </head>
 <body>
-    <input type="button" value="match" onClick="match();">
-    <div><span id="res"></span></div>
+    <p><a href="match">match</a></p>
+    <p><a href="countdown">countdown</a></p>
 </body>
 </html>
