--- a/public/html/countdown.html
+++ b/public/html/countdown.html
@@ -7,6 +7,7 @@
     <script type="text/javascript" src="js/countdown.js"></script>
 </head>
 <body>
+    <p><a href="/">top</a></p>
     <input type="text" id="limit">
     <input type="text" id="interval">
     <input type="button" value="start" onClick="start();">
