--- a/public/html/match.html
+++ b/public/html/match.html
@@ -7,6 +7,7 @@
     <script type="text/javascript" src="js/match.js"></script>
 </head>
 <body>
+    <p><a href="/">top</a></p>
     <input type="button" value="match" onClick="match();">
     <div><span id="res"></span></div>
 </body>
